Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-15602

Wine MIDIMap driver doesn't support XP registry settings

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.12
    • Audio, Wine
    • None

    Description

      In Windows XP and higher current MIDI device is stored in szPname string value within HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Multimedia\MIDIMap registry key.

      Wine MIDI Mapper driver currently doesn't support it.

      Attachments

        Issue Links

          Activity

            People

              hbelusca hbelusca
              binarymaster Stas'M
              Votes:
              2 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: