[WINMM:MIDIMAP] Support Windows XP compatible MIDIMap registry setting (#1240)

CORE-15602